@@ -11,5 +11,7 @@ weapons - drops weapons, bows, and arrows.
 armor (armour) - drops armor, shield, and helmets.
 misc - drops horns, books, girdles, amulets, rings, cloaks, boots, gloves,
    bracers, scrolls, wands, rods, and potions.
+food - drops food and drink.
+flesh - drops all flesh.
 
 See also 'drop' and mouse button control for dropping objects.
