@@ -9,6 +9,8 @@ Le type peut prendre l'une des valeurs suivantes:
     weapons: dépose armes, arcs et projectiles
     armor (ou armour): dépose armures, boucliers et casques
     misc: dépose cornes, livres, ceintures, amulettes, anneaux, capes, bottes, gants, bracelets, parchemins, bâtons, baguettes et potions
+    food: dépose nourriture et boissons
+    flesh: dépose les parties de corps
 
 Si le type n'est pas spécifié, tous les objets à l'exception de la nourriture, de l'argent, des clefs et des conteneurs seront déposés.
 
